src/objects/Fiscal_Document_Line__c.object
<CustomObject>
    <fields>
        <fullName>ATOM_Id__c</fullName>
        <label>ATOM Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Amount_Value__c</fullName>
        <formula>Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Document_Draft__c</fullName>
        <formula>Fiscal_Document__r.Draft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Document Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Document__c</fullName>
        <label>Fiscal Document</label>
        <referenceTo>Fiscal_Document__c</referenceTo>
        <relationshipLabel>Fiscal Document Lines</relationshipLabel>
        <relationshipName>Fiscal_Document_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Net_Subtotal_Value__c</fullName>
        <label>Net Subtotal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Subtotal__c</fullName>
        <formula>Subtotal__c - Tax_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nominal_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nominal Code</label>
        <referenceTo>Nominal_Code__c</referenceTo>
        <relationshipLabel>Fiscal Document Lines</relationshipLabel>
        <relationshipName>Fiscal_Document_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fiscal Document Lines</relationshipLabel>
        <relationshipName>Fiscal_Document_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtotal_Value__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Amount__c * (1 + Tax_Rate__c) * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Subtotal_Value__c</fullName>
        <label>Tax Subtotal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Subtotal__c</fullName>
        <formula>Amount__c * Tax_Rate__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tax</label>
        <referenceTo>Tax__c</referenceTo>
        <relationshipLabel>Fiscal Document Lines</relationshipLabel>
        <relationshipName>Fiscal_Document_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fiscal Document Line</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiscal Document Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Protect_Non_Draft_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Amount__c) ,  Fiscal_Document_Draft__c  == False)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Amount cannot be changed on a Fiscal Document Line where the Fiscal Document is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Description</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Description__c) ,  Fiscal_Document_Draft__c  == False)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description cannot be changed on a Fiscal Document Line where the Fiscal Document is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Quantity__c) ,  Fiscal_Document_Draft__c  == False)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity cannot be changed on a Fiscal Document Line where the Fiscal Document is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Tax</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Tax_Rate__c) ,  Fiscal_Document_Draft__c  == False)</errorConditionFormula>
        <errorDisplayField>Tax__c</errorDisplayField>
        <errorMessage>Tax Code cannot be changed on a Fiscal Document Line where the Fiscal Document is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Quantity_Less_Equal_to_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c   &lt;= 0</errorConditionFormula>
        <errorMessage>Quantity cannot be less than or equal to zero</errorMessage>
    </validationRules>
</CustomObject>